# coxeter-group-rs

./: AGENT.md  Cargo.toml  README.md
src/: bruhat.rs  graph.rs  lib.rs  matrix.rs  reflection.rs  word.rs  word_problem.rs
